force-app/main/default/objects/License__c/fields/CreateAssocLicenseDep2__c.field-meta.xml
<CustomField>
    <fullName>CreateAssocLicenseDep2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create Associated License for Dependent License 2</description>
    <label>Create Assoc License for Dep 2</label>
    <type>Checkbox</type>
</CustomField>