force-app/main/default/objects/License__c/fields/CreateDUALApplication__c.field-meta.xml
<CustomField>
    <fullName>CreateDUALApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create DUAL Application</label>
    <type>Checkbox</type>
</CustomField>