force-app/main/default/objects/License__c/fields/CreateInactiveTransaction__c.field-meta.xml
<CustomField>
    <fullName>CreateInactiveTransaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN12212020-Created for PVL Phase 1</description>
    <label>Create Inactive Transaction</label>
    <type>Checkbox</type>
</CustomField>