force-app/main/default/objects/License__c/fields/CreateJointVenture__c.field-meta.xml
<CustomField>
    <fullName>CreateJointVenture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV082319 - Created for PVL phase 1</description>
    <inlineHelpText>Please confirm that you would like to create a Joint Venture</inlineHelpText>
    <label>Create Joint Venture</label>
    <type>Checkbox</type>
</CustomField>