force-app/main/default/objects/License__c/fields/CreateLicenseHistory__c.field-meta.xml
<CustomField>
    <fullName>CreateLicenseHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create License History</label>
    <type>Checkbox</type>
</CustomField>