force-app/main/default/objects/License__c/fields/CreateParentJointVenture__c.field-meta.xml
<CustomField>
    <fullName>CreateParentJointVenture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV091019 - Created for PVL phase 1 to be used as a trigger to create the Joint Venture Parent Record. This flag is set by the PB.</description>
    <label>Create Parent Joint Venture</label>
    <type>Checkbox</type>
</CustomField>