force-app/main/default/objects/License__c/fields/CRFPaid__c.field-meta.xml
<CustomField>
    <fullName>CRFPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT021720- Created for PVL phase 1</description>
    <label>CRF Paid</label>
    <type>Checkbox</type>
</CustomField>