force-app/main/default/objects/License__c/fields/CumulativeExperience__c.field-meta.xml
<CustomField>
    <fullName>CumulativeExperience__c</fullName>
    <description>PacPoint-FT021820- Created for PVL phase 1</description>
    <label>Cumulative Experience</label>
    <length>1</length>
    <type>Text</type>
</CustomField>