force-app/main/default/objects/License__c/fields/CurrentBiennium__c.field-meta.xml
<CustomField>
    <fullName>CurrentBiennium__c</fullName>
    <formula>TEXT(YEAR(LicenseType__r.LicenseTypeExpireDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Biennium</label>
    <type>Text</type>
</CustomField>