force-app/main/default/objects/License__c/fields/CurrentBienniumStart__c.field-meta.xml
<CustomField>
    <fullName>CurrentBienniumStart__c</fullName>
    <formula>TEXT(YEAR(LicenseType__r.LicenseTypeEffectiveDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Biennium Start</label>
    <type>Text</type>
</CustomField>