force-app/main/default/objects/License__c/fields/CurrentEmployeeCount__c.field-meta.xml
<CustomField>
    <fullName>CurrentEmployeeCount__c</fullName>
    <description>PacPoint-FT111919 - Created for PVL Phase 1</description>
    <label>Current Employee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>