force-app/main/default/objects/License__c/fields/CurrentGapInInsurance__c.field-meta.xml
<CustomField>
    <fullName>CurrentGapInInsurance__c</fullName>
    <description>PacPoint-KN081519 - Created for PVL Phase 1</description>
    <label>Current Gap In Insurance</label>
    <summarizedField>InsuranceBond__c.CurrentGapInInsurance__c</summarizedField>
    <summaryFilterItems>
        <field>InsuranceBond__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>InsuranceBond__c.License__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>