force-app/main/default/objects/License__c/fields/CurrentGapinLiability__c.field-meta.xml
<CustomField>
    <fullName>CurrentGapinLiability__c</fullName>
    <description>PacPoint-KN03262020 (Case 5015) - Created for PVL Phase 1 Sprint 3</description>
    <label>Current Gap in Liability</label>
    <summarizedField>InsuranceBond__c.CurrentGapInInsurance__c</summarizedField>
    <summaryFilterItems>
        <field>InsuranceBond__c.Type__c</field>
        <operation>equals</operation>
        <value>LI - Liability</value>
    </summaryFilterItems>
    <summaryForeignKey>InsuranceBond__c.License__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>