force-app/main/default/objects/License__c/fields/CurrentGapinWorkersComp__c.field-meta.xml
<CustomField>
    <fullName>CurrentGapinWorkersComp__c</fullName>
    <description>PacPoint-KN032622020 (Case 5015) -Created for PVL Phase 1 Sprint 3</description>
    <label>Current Gap in Workers Comp</label>
    <summarizedField>InsuranceBond__c.CurrentGapInInsurance__c</summarizedField>
    <summaryFilterItems>
        <field>InsuranceBond__c.Type__c</field>
        <operation>equals</operation>
        <value>WC - Workers Compensation</value>
    </summaryFilterItems>
    <summaryForeignKey>InsuranceBond__c.License__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>