force-app/main/default/objects/License__c/fields/CurrentPeriodCoreCERequirement__c.field-meta.xml
<CustomField>
    <fullName>CurrentPeriodCoreCERequirement__c</fullName>
    <formula>LicenseType__r.CurrentPeriodCoreCERequirement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Period Core CE Requirement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>