force-app/main/default/objects/License__c/fields/CurrentPeriodElectiveCERequirement__c.field-meta.xml
<CustomField>
    <fullName>CurrentPeriodElectiveCERequirement__c</fullName>
    <formula>LicenseType__r.CurrentPeriodElectiveCERequirement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Period Elective CE Requirement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>