force-app/main/default/objects/License__c/fields/CurrentPeriodTotalCERequirement__c.field-meta.xml
<CustomField>
    <fullName>CurrentPeriodTotalCERequirement__c</fullName>
    <formula>CurrentPeriodCoreCERequirement__c +  CurrentPeriodElectiveCERequirement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Period Total CE Requirement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>