force-app/main/default/objects/License__c/fields/CurrentRenewalSubmitted__c.field-meta.xml
<CustomField>
    <fullName>CurrentRenewalSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Renewal Submitted</label>
    <type>Checkbox</type>
</CustomField>