force-app/main/default/objects/License__c/fields/D2CEisRequired__c.field-meta.xml
<CustomField>
    <fullName>D2CEisRequired__c</fullName>
    <formula>LicenseType__r.D2CERequired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D2 CE is Required</label>
    <type>Checkbox</type>
</CustomField>