force-app/main/default/objects/License__c/fields/Date_Employment_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Date_Employment_Terminated__c</fullName>
    <formula>Ins_Expire_Cancel_Date__c -1</formula>
    <label>Date Employment Terminated</label>
    <type>Date</type>
</CustomField>