force-app/main/default/objects/License__c/fields/DateofAutoForfeiture__c.field-meta.xml
<CustomField>
    <fullName>DateofAutoForfeiture__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <label>Date of Auto Forfeiture</label>
    <type>Date</type>
</CustomField>