force-app/main/default/objects/License__c/fields/DateofDegree__c.field-meta.xml
<CustomField>
    <fullName>DateofDegree__c</fullName>
    <description>PacPoint-KN09242020-Created for PVL Phase 1</description>
    <label>Date of Degree</label>
    <type>Date</type>
</CustomField>