force-app/main/default/objects/License__c/fields/DaysSinceLossofEntity__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceLossofEntity__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <formula>TODAY()-  LossofEntityDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of days since the Loss of Entity date.</inlineHelpText>
    <label>Days Since Loss of Entity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>