force-app/main/default/objects/License__c/fields/DaysSinceLossofPrincipalRME__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceLossofPrincipalRME__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <formula>TODAY() -  LossofPrincipalRMENoticeSentDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of days since the Loss of Principal RME date.</inlineHelpText>
    <label>Days Since Loss of Principal RME</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>