force-app/main/default/objects/License__c/fields/DaysSinceLossofRME__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceLossofRME__c</fullName>
    <description>PacPoint-KN02032020-Created for PVL Phase 1 Sprint 2</description>
    <formula>TODAY() - LossofRMENoticeSentDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of days since the loss of RME date.</inlineHelpText>
    <label>Days Since Loss of RME</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>