force-app/main/default/objects/License__c/fields/DaysSinceNonRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceNonRenewalDate__c</fullName>
    <description>PacPoint-KN081419 - Created for PVL Phase 1</description>
    <formula>TODAY() - NonRenewalDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Non Renewal Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>