force-app/main/default/objects/License__c/fields/DBAEntity__c.field-meta.xml
<CustomField>
    <fullName>DBAEntity__c</fullName>
    <formula>IF(
NOT(TradeName__c = &quot;&quot;),
&quot;DBA &quot; + TradeName__c,
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DBA Entity</label>
    <type>Text</type>
</CustomField>