force-app/main/default/objects/License__c/fields/DebugText__c.field-meta.xml
<CustomField>
    <fullName>DebugText__c</fullName>
    <label>DebugText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>