force-app/main/default/objects/License__c/fields/DependencyRequired__c.field-meta.xml
<CustomField>
    <fullName>DependencyRequired__c</fullName>
    <description>PACIFICPoint-AZ20200908- 00010823</description>
    <formula>LicenseType__r.DependencyRequired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependency Required</label>
    <type>Checkbox</type>
</CustomField>