force-app/main/default/objects/License__c/fields/DependentEstablishmentPrincName__c.field-meta.xml
<CustomField>
    <fullName>DependentEstablishmentPrincName__c</fullName>
    <description>PacPoint-KN02072020-Created for PVL Phase 1 Sprint 3</description>
    <formula>DependentLicense__r.DependentLicense__r.DependentLicenseeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Establishment Princ. Name</label>
    <type>Text</type>
</CustomField>