force-app/main/default/objects/License__c/fields/DependentLicense2__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-DN02052020 - Created for PVL Sprint 3 Phase 1</description>
    <label>Dependent License 2</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Licenses (Dependent License 2)</relationshipLabel>
    <relationshipName>Licenses1</relationshipName>
    <type>Lookup</type>
</CustomField>