force-app/main/default/objects/License__c/fields/DependentLicense2ActiveInactive__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense2ActiveInactive__c</fullName>
    <description>PacPoint-DN02052020 - Created for PVL Sprint 3 Phase 1</description>
    <formula>TEXT(DependentLicense2__r.ActiveInactive__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License 2 Active / Inactive</label>
    <type>Text</type>
</CustomField>