force-app/main/default/objects/License__c/fields/DependentLicense2EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense2EffectiveDate__c</fullName>
    <description>PacPoint-KN11102020-Created for PVL Phase 1</description>
    <formula>DependentLicense2__r.OriginalDateofLicensure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License 2 Effective Date</label>
    <type>Date</type>
</CustomField>