force-app/main/default/objects/License__c/fields/DependentLicense2ExpireDate__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense2ExpireDate__c</fullName>
    <description>PacPoint-KN 12022020 - Created for PVL Phase 1</description>
    <formula>DependentLicense2__r.EffectiveExpireDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License 2 Expire Date</label>
    <type>Date</type>
</CustomField>