force-app/main/default/objects/License__c/fields/DependentLicense2NonRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense2NonRenewalDate__c</fullName>
    <description>PacPoint-DN02052020 - Created for PVL Sprint 3 Phase 1</description>
    <formula>DependentLicense2__r.NonRenewalDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License 2 Non Renewal Date</label>
    <type>Date</type>
</CustomField>