force-app/main/default/objects/License__c/fields/DependentLicense2NumberFormula__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense2NumberFormula__c</fullName>
    <description>PacPoint-KN12072020 - Created for PVL Phase 1</description>
    <formula>DependentLicense2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License 2 Number Formula</label>
    <type>Text</type>
</CustomField>