force-app/main/default/objects/License__c/fields/DependentLicense3__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN12012020 Created for PVL Phase 1</description>
    <label>Dependent License 3</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Licenses (Dependent License 3)</relationshipLabel>
    <relationshipName>Licenses6</relationshipName>
    <type>Lookup</type>
</CustomField>