force-app/main/default/objects/License__c/fields/DependentLicense3EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense3EffectiveDate__c</fullName>
    <description>PacPoint 12012020 - Created for PVL Phase 1</description>
    <formula>DependentLicense3__r.OriginalDateofLicensure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License 3 Effective Date</label>
    <type>Date</type>
</CustomField>