force-app/main/default/objects/License__c/fields/DependentLicense3ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense3ExpirationDate__c</fullName>
    <formula>DependentLicense3__r.EffectiveExpireDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License 3 Expiration Date</label>
    <type>Date</type>
</CustomField>