force-app/main/default/objects/License__c/fields/DependentLicense3NumberFormula__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense3NumberFormula__c</fullName>
    <description>PacPoint 12012020 - Created for PVL Phase 1</description>
    <formula>DependentLicense3__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License 3 Number Formula</label>
    <type>Text</type>
</CustomField>