force-app/main/default/objects/License__c/fields/DependentLicense3Status__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense3Status__c</fullName>
    <description>PacPoint 12012020-Created for PVL Phase 1</description>
    <formula>TEXT(DependentLicense3__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License 3 Status</label>
    <type>Text</type>
</CustomField>