force-app/main/default/objects/License__c/fields/DependentLicense__c.field-meta.xml
<CustomField>
    <fullName>DependentLicense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <inlineHelpText>The dependent license will be brought over from the application. Changes can be manually made here. This field is set with the Entity/Principal checkbox in the associated licenses section.</inlineHelpText>
    <label>Dependent License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>DependentLicenses</relationshipName>
    <type>Lookup</type>
</CustomField>