force-app/main/default/objects/License__c/fields/DependentLicenseActiveInactive__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseActiveInactive__c</fullName>
    <description>PacPoint-FT081319- Created for PVL phase 1</description>
    <formula>TEXT(DependentLicense__r.ActiveInactive__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Active / Inactive</label>
    <type>Text</type>
</CustomField>