force-app/main/default/objects/License__c/fields/DependentLicenseClassPrefix__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseClassPrefix__c</fullName>
    <description>PacPoint - FT040120 - PVL Phase 1 Sprint 3</description>
    <formula>DependentLicense__r.ClassPrefix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Class Prefix</label>
    <type>Text</type>
</CustomField>