force-app/main/default/objects/License__c/fields/DependentLicensee3__c.field-meta.xml
<CustomField>
    <fullName>DependentLicensee3__c</fullName>
    <description>PacPoint-12012020 - Created for PVL Phase 1</description>
    <formula>DependentLicense3__r.LicenseeNameFormula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Licensee 3</label>
    <type>Text</type>
</CustomField>