force-app/main/default/objects/License__c/fields/DependentLicenseEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseEffectiveDate__c</fullName>
    <description>PacPoint-KN03162020-Created for PVL Phase 1 Sprint 3</description>
    <formula>DependentLicense__r.OriginalDateofLicensure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Effective Date</label>
    <type>Date</type>
</CustomField>