force-app/main/default/objects/License__c/fields/DependentLicenseeName__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseeName__c</fullName>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <formula>IF(
 DependentLicense__r.Licensee__r.RecordType.DeveloperName = &apos;BusinessAccount&apos;,
 DependentLicense__r.Licensee__r.Name, 
 DependentLicense__r.Licensee__r.FirstName &amp; &quot; &quot;&amp;  DependentLicense__r.Licensee__r.LastName 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent Licensee Name</label>
    <type>Text</type>
</CustomField>