force-app/main/default/objects/License__c/fields/DependentLicenseEstablishmentsPrinc__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseEstablishmentsPrinc__c</fullName>
    <formula>DependentLicense__r.DependentLicense__r.DependentLicense__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Establishment&apos;s Princ.</label>
    <type>Text</type>
</CustomField>