force-app/main/default/objects/License__c/fields/DependentLicenseExpireDate__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseExpireDate__c</fullName>
    <description>PacPoint 12012020 - Created for PVL Phase 1</description>
    <formula>DependentLicense__r.EffectiveExpireDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Expire Date</label>
    <type>Date</type>
</CustomField>