force-app/main/default/objects/License__c/fields/DependentLicenseNonRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseNonRenewalDate__c</fullName>
    <description>PacPoint FT 081419 - Created for PVL Phase 1</description>
    <formula>DependentLicense__r.NonRenewalDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Non Renewal Date</label>
    <type>Date</type>
</CustomField>