force-app/main/default/objects/License__c/fields/DependentLicenseNumberFormula__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseNumberFormula__c</fullName>
    <description>PacPoint-KN04302020 - Created for PVL Phase 1 Sprint 3</description>
    <formula>DependentLicense__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Number Formula</label>
    <type>Text</type>
</CustomField>