force-app/main/default/objects/License__c/fields/DependentLicensePrivilege__c.field-meta.xml
<CustomField>
    <fullName>DependentLicensePrivilege__c</fullName>
    <description>PacPoint-KN05292020-Created for PVL Phase 1 Sprint 4</description>
    <formula>TEXT(DependentLicense__r.Privilege__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Privilege</label>
    <type>Text</type>
</CustomField>