force-app/main/default/objects/License__c/fields/DependentLicenseRenewed__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseRenewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dependent License Renewed</label>
    <type>Checkbox</type>
</CustomField>