force-app/main/default/objects/License__c/fields/DependentLicensesDependent__c.field-meta.xml
<CustomField>
    <fullName>DependentLicensesDependent__c</fullName>
    <formula>DependentLicense__r.DependentLicense__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License&apos;s Dependent</label>
    <type>Text</type>
</CustomField>