force-app/main/default/objects/License__c/fields/DependentLicensesEstablishment__c.field-meta.xml
<CustomField>
    <fullName>DependentLicensesEstablishment__c</fullName>
    <formula>DependentLicense__r.DependentLicense__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License&apos;s Establishment</label>
    <type>Text</type>
</CustomField>