force-app/main/default/objects/License__c/fields/DependentLicensesEstablishmentName__c.field-meta.xml
<CustomField>
    <fullName>DependentLicensesEstablishmentName__c</fullName>
    <description>PacPoint-KN02072020-Created for PVL Phase 1 Sprint 3</description>
    <formula>DependentLicense__r.DependentLicense__r.Licensee__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License&apos;s Establishment Name</label>
    <type>Text</type>
</CustomField>