force-app/main/default/objects/License__c/fields/DependentLicenseStatus__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseStatus__c</fullName>
    <description>PacPoint FT 081419 - Created for PVL Phase 1</description>
    <formula>TEXT(DependentLicense__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License Status</label>
    <type>Text</type>
</CustomField>