force-app/main/default/objects/License__c/fields/DependentLicenseThisLicenseRenewed__c.field-meta.xml
<CustomField>
    <fullName>DependentLicenseThisLicenseRenewed__c</fullName>
    <formula>DependentLicense__r.ThisLicenseRenewed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent License This License Renewed</label>
    <type>Checkbox</type>
</CustomField>