force-app/main/default/objects/License__c/fields/DisciplinaryAction__c.field-meta.xml
<CustomField>
    <fullName>DisciplinaryAction__c</fullName>
    <description>PacPoint JF 2/24/25: Created for flag to indicate disciplinary action against the license</description>
    <formula>IF(
OR(
TEXT(Status__c) = &quot;Z - Current &amp; Valid, But Subject To Disciplinary Requirement&quot;,
TEXT(Status__c) = &quot;ZC - Voluntarily Surrender Or Forfeit License Due To Disciplinary Action&quot;,
TEXT(Status__c) = &quot;ZF - Terminated Due To Recovery Fund Payout&quot;,
TEXT(Status__c) = &quot;ZP - Voluntary Suspension&quot;,
TEXT(Status__c) = &quot;ZR - Revoked&quot;,
TEXT(Status__c) = &quot;ZS - Suspended&quot;,
TEXT(Status__c) = &quot;ZV - Voluntary Revocation&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disciplinary Action</label>
    <type>Checkbox</type>
</CustomField>