force-app/main/default/objects/License__c/fields/DocumentFolderStatus__c.field-meta.xml
<CustomField>
    <fullName>DocumentFolderStatus__c</fullName>
    <description>PacPoint-FT020420- Created for PVL phase 1</description>
    <label>Document Folder Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T - Awaiting Scanning</fullName>
            </value>
            <value>
                <fullName>D - Folder Destroyed</fullName>
            </value>
            <value>
                <fullName>S - Folder in Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>