force-app/main/default/objects/License__c/fields/Dual__c.field-meta.xml
<CustomField>
    <fullName>Dual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC080519- Created for PVL phase 1</description>
    <inlineHelpText>Indicates if the license has a dual status.</inlineHelpText>
    <label>Dual</label>
    <type>Checkbox</type>
</CustomField>