force-app/main/default/objects/License__c/fields/EducationCity__c.field-meta.xml
<CustomField>
    <fullName>EducationCity__c</fullName>
    <description>PacPoint-DN08202020- Created for PVL Sprint 7 Phase 1</description>
    <label>Education City</label>
    <length>35</length>
    <type>Text</type>
</CustomField>