force-app/main/default/objects/License__c/fields/EducationCode__c.field-meta.xml
<CustomField>
    <fullName>EducationCode__c</fullName>
    <label>Education Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C - CONTINUING EDUCATION</fullName>
            </value>
            <value>
                <fullName>L - LAW DEGREE</fullName>
            </value>
            <value>
                <fullName>M - REAL ESTATE MAJOR</fullName>
            </value>
            <value>
                <fullName>P - GRI OR PROFESSIONAL</fullName>
            </value>
            <value>
                <fullName>R - MINIMUM REAL ESTATE COURSE</fullName>
            </value>
            <value>
                <fullName>S - SALESMAN COURSE</fullName>
            </value>
            <value>
                <fullName>W - CONTINUING EDUCATION WAIVED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>