force-app/main/default/objects/License__c/fields/EducationCounty__c.field-meta.xml
<CustomField>
    <fullName>EducationCounty__c</fullName>
    <description>PacPoint-DN08202020- Created for PVL Sprint 7 Phase 1</description>
    <label>Education County</label>
    <length>30</length>
    <type>Text</type>
</CustomField>