force-app/main/default/objects/License__c/fields/EducationEndDate2__c.field-meta.xml
<CustomField>
    <fullName>EducationEndDate2__c</fullName>
    <label>Education End Date</label>
    <length>7</length>
    <type>Text</type>
</CustomField>