force-app/main/default/objects/License__c/fields/EducationEndDate__c.field-meta.xml
<CustomField>
    <fullName>EducationEndDate__c</fullName>
    <description>PacPoint-DN08202020- Created for PVL Sprint 7 Phase 1</description>
    <label>Education End Date</label>
    <type>Date</type>
</CustomField>