force-app/main/default/objects/License__c/fields/EducationStartDate2__c.field-meta.xml
<CustomField>
    <fullName>EducationStartDate2__c</fullName>
    <label>Education Start Date</label>
    <length>7</length>
    <type>Text</type>
</CustomField>