force-app/main/default/objects/License__c/fields/EducationStartDate__c.field-meta.xml
<CustomField>
    <fullName>EducationStartDate__c</fullName>
    <description>PacPoint-DN08202020- Created for PVL Sprint 7 Phase 1</description>
    <label>Education Start Date</label>
    <type>Date</type>
</CustomField>