force-app/main/default/objects/License__c/fields/EducationState__c.field-meta.xml
<CustomField>
    <fullName>EducationState__c</fullName>
    <description>PacPoint-DN08202020- Created for PVL Sprint 7 Phase 1</description>
    <label>Education State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>