force-app/main/default/objects/License__c/fields/EffectiveCheckDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveCheckDate__c</fullName>
    <formula>EffectiveExpireDate__c +  LicenseType__r.RenewalWindowInDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Check Date</label>
    <type>Date</type>
</CustomField>