force-app/main/default/objects/License__c/fields/EffectiveExpireDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveExpireDate__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <inlineHelpText>The date the license expires</inlineHelpText>
    <label>Effective Expire Date</label>
    <type>Date</type>
</CustomField>